--- a/frontend-service/index.html
+++ b/frontend-service/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
-<!--
-* CoreUI Free React.js Admin Template
-* @version v5.2.0
-* @link https://coreui.io/product/free-react-admin-template/
-* Copyright (c) 2024 creativeLabs Łukasz Holeczek
-* Licensed under MIT (https://github.com/coreui/coreui-free-react-admin-template/blob/main/LICENSE)
--->
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="CoreUI for React - Open Source Bootstrap Admin Template">
-    <meta name="author" content="Łukasz Holeczek">
-    <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React">
-    <title>Shutter Mev Analysis</title>
+    <meta name="description" content="Shutter MEV">
+    <meta name="author" content="Isotrop">
+    <meta name="keyword" content="Isotrop,MEV,Dashboard">
+    <title>Shutter Mev </title>
     <link rel="manifest" href="/manifest.json">
     <link rel="shortcut icon" href="/favicon.ico">
   </head>
